HelloUltraviolet/Fixtures/RejectedSource/Names/PrivateAccess/Source/Hidden/PrivateValue.uv
//! Hidden module fixture for private visibility diagnostics.

private procedure hiddenPrivateValue() -> i32 {
    return 7
}
